Added basic tutorial notebooks
Notebooks:

For loops and if statements
Lists and Dicrs

--- a/Intro to Jupyter Notebook.ipynb
+++ b/Intro to Jupyter Notebook.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Managing Cells\n",
+    "### Managing Cells\n",
     "Cells are independent and each cell has its own **output**, try running the cell below and output `Hello World`"
    ]
   },
@@ -52,16 +52,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The number in brackets located to the left of the cell indicates the order in which cells have been ran.\n",
+    "The number in brackets located to the left of the cell `In[XX]` indicates the order in which cells have been ran.\n",
     "\n",
-    "The output of any cell can be collpased by double clicking on the whitespace to the left of the output. This can be helpful if a cell has a large output.\n",
+    "The output of any cell can be **collpased** by double clicking on the whitespace to the left of the output. This can be helpful if a cell has a large output.\n",
     "\n",
-    "Try this on the cell below:"
+    "Try **collapsing** the cell output below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -183,51 +183,82 @@
    "metadata": {},
    "source": [
     "# Interactive Cells\n",
-    "Another useful property of cells is their autonomy from each other. Unlike a normal python script or file, we can do **quick calculations** in our workspace just using any valid python syntax. This will not effect any other cells in the notebook, unlike a normal python file which would throw an error."
+    "Another useful property of cells is their autonomy from each other. Unlike a normal python script or file, we can do **quick calculations** in our workspace just using any valid python syntax."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arithmetic Operators in Python\n",
+    "Python is also a wonderful calculator \n",
+    "\n",
+    "`+` : add  \n",
+    "`-`: subtract  \n",
+    "`*` : multiply  \n",
+    "`/` : divide  \n",
+    "`**`: power  \n",
+    "`%`: mod    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1 + 1 "
+    "4 % 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6.0"
+       "1"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(10007 + 44785) / 4 % 7"
+    "1 + 1 * 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13691.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(10007 + 44785) / 4 - 7"
    ]
   },
   {
@@ -316,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
