--- a/Tutorial/CORGIS Tutorial.ipynb
+++ b/Tutorial/CORGIS Tutorial.ipynb
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import graduates\n",
+    "import graduates as g\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
    ],
    "source": [
     "## YOUR CODE HERE ##\n",
-    "first_dict = grad_list[0]\n",
+    "first_dict = \n",
     "## END ##\n",
     "print(first_dict)"
    ]
@@ -156,7 +156,7 @@
    ],
    "source": [
     "## YOUR CODE HERE ##\n",
-    "keys = first_dict.keys()\n",
+    "keys = \n",
     "## END ##\n",
     "print(keys)"
    ]
@@ -188,8 +188,8 @@
    ],
    "source": [
     "## YOUR CODE HERE ##\n",
-    "education_1 = first_dict['Education']\n",
-    "year_1 = first_dict['Year']\n",
+    "education_1 = \n",
+    "year_1 = \n",
     "## END ##\n",
     "print(education_1)\n",
     "print(\"\\nYear: \", year_1)"
@@ -238,10 +238,11 @@
     "\n",
     "for entry in grad_list:\n",
     "    ## YOUR CODE HERE ##\n",
-    "    if entry['Education']['Major'] == \"Biological Sciences\": # check the Major of each entry\n",
-    "        year = entry[\"Year\"]\n",
+    "    if entry[][] == \"Biological Sciences\": # check the Major of each entry\n",
+    "        year = entry[]\n",
+    "        ## END ##\n",
     "        bio_years.append(year) # add the year of that entry to the list\n",
-    "    ## END ##\n",
+    "\n",
     "print(\"bio_years = \", bio_years)"
    ]
   },
@@ -283,7 +284,7 @@
     "    if entry['Education']['Major'] == \"Biological Sciences\": # check the Major of each entry\n",
     "        \n",
     "        ## YOUR CODE HERE ##\n",
-    "        degs = entry['Education']['Degrees']['Bachelors']\n",
+    "        degs = entry[][][]\n",
     "         ## END ##\n",
     "            \n",
     "        bio_degs.append(degs) # add the bachelor degrees of that entry to the list\n",
@@ -330,9 +331,10 @@
     }
    ],
    "source": [
+    "# Bars should represent amount of degrees \n",
     "## YOUR CODE HERE ##\n",
-    "x = bio_years\n",
-    "y = bio_degs\n",
+    "x = \n",
+    "y = \n",
     "## END ##\n",
     "\n",
     "plt.bar(x, y)\n",
@@ -373,7 +375,7 @@
     "x_pos = [i for i, _ in enumerate(bio_years)] # removes the empty spaces between bars\n",
     "\n",
     "## YOUR CODE HERE ##\n",
-    "plt.xlabel(\"Year\") # X axis\n",
+    "plt.xlabel() # X axis\n",
     "plt.ylabel(\"Degrees Awarded\") # Y axis\n",
     "plt.title(\"Bio Science Degrees Awarded Yearly\") # Graph Title\n",
     "## END ##\n",
