add image to Student grades

--- a/Tutorial/Student Grades.ipynb
+++ b/Tutorial/Student Grades.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "Below is an example of what a spreadsheet containing grades and students might look like **before** being exported as a `.csv`\n",
     "\n",
-    "![csv_example.PNG](attachment:csv_example.PNG)\n",
+    "<img src=\"https://github.com/scole02/DSI_tutorial/blob/main/DSI_notebook_images/csv_example.png\" width=\"200\"/>\n",
     "\n",
     "\n",
     "## Importing Data\n",
