--- a/Tutorial/2_For Loops and If Statements.ipynb
+++ b/Tutorial/2_For Loops and If Statements.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "for item in list:\n",
     "    ### YOUR CODE HERE ###\n",
-    "    double = \n",
+    "    doubled = \n",
     "    ### END ###\n",
     "    print(\"{} * 2 = {}\".format(item, double))"
    ]
